Initial Commit with Basic html tags

--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-<p>Jay Raman </p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>Essential Herbs </title>
+   </head>
+   <h1>
+      Top 5 Herbs to add to your daily meal.
+   </h1>
+   <h2>
+      Turmeric
+   </h2>
+   <table>
+      <tr>
+         <td>
+            <img src="file:///Users/jayasreeraman/Downloads/Turmeric.jpg" width="500" height="300">
+         </td>
+         <td>
+            <h3>   
+               Turmeric is a common spice and a major ingredient in curry powder. <br>
+               Curcumin is a major component of turmeric, and the activities of turmeric 
+               are commonly attributed to curcuminoids (curcumin and closely related substances). 
+               Curcumin gives turmeric its yellow color.
+            </h3>
+         </td>
+      </tr>
+   </table>
+
+   <h2>
+      Black Pepper
+   </h2>
+
+   <table>
+      <tr>
+         <td>
+            <img src="file:///Users/jayasreeraman/Downloads/blackpepper_King of Spices.png" width="500" height="300">
+         </td>
+         <td>
+            <h3>   
+               For centuries, Ayurveda and naturopathy have prescribed black pepper as a remedy for cold and cough <br>
+               because of its medicinal properties. Your grandmother may have tried this home cure on your mother and <br>
+               your mother on you, for the age-old black pepper-honey concoction is effective in providing relief from <br>
+               nasal congestion and cough. It is known to soothe sore throats and keep infections at bay.
+            </h3>
+         </td>
+      </tr>
+   </table>
+
+
+   <h2>
+      Cumins
+   </h2>
+
+   <table>
+      <tr>
+         <td>
+            <img src="file:///Users/jayasreeraman/Downloads/cumin.jpeg" width="500" height="300">
+         </td>
+         <td>
+            <h3>   
+               Cumin seeds not only add taste to food but also are very beneficial for body. <br>
+               Also known as jeera, these cumin seeds have been extensively used in culinary preparations in <br>
+               the Indian subcontinent since ages.
+            </h3>
+         </td>
+      </tr>
+   </table>
+
+
+   <h2>
+      Fenugreek Seeds
+   </h2>
+
+   <table>
+      <tr>
+         <td>
+            <img src="file:///Users/jayasreeraman/Downloads/fenugreek.jpg" width="500" height="300">
+         </td>
+         <td>
+            <h3>
+               Fenugreek is truly a multi-purpose herb. People from Western Asia and the Mediterranean have used <br>
+               fenugreek for thousands of years to flavor food, improve health, and soothe skin maladies. <br>
+               In more recent years, fenugreek has gained global popularity as an herbal supplement with <br>
+               a variety of health benefits.   
+              </h3>
+         </td>
+      </tr>
+   </table>
+   
+   <h2>Mint</h2>
+
+   <table>
+      <tr>
+         <td>
+            <img src="file:///Users/jayasreeraman/Downloads/Mint_Leaves.jpg" width="500" height="300">
+         </td>
+         <td>
+            <h3>
+               These plants are particularly known for the cooling sensation they impart. They can be added to foods in both <br>
+               fresh and dried forms. Mint is a popular ingredient in several foods and beverages, ranging from teas and <br>
+               alcoholic drinks to sauces, salads and desserts. While eating the plant offers some health benefits, research <br>
+               shows that several of mint’s health benefits come from applying it to the skin, inhaling its aroma or taking <br>
+               it as a capsule.
+            </h3>
+         </td>
+      </tr>
+   </table>
+   
+   <body></body>
+
+</html>
